# epa-gradients

./: .gitignore  LICENSE  README.md  pyproject.toml
config/: ca_overrides.csv  pa_overrides.csv  settings.toml
data/raw/: api_2024.json  api_2025.json  api_2026.json  ca_place_centroids.csv  csv_team_years.parquet  tba_ca_locations.json  zcta_centroids.csv
data/review/: ca_team_locations.csv  ca_unmapped_teams.csv  pa_defunct_teams.csv  pa_geo_proposed.csv  state_district_map.json  unmapped_teams.csv
docs/: index.html
docs/assets/css/: styles.css
docs/assets/js/: app.js  comparison.js  curves.js  data.js  format.js  heatmap.js  hero.js  interp.js  metrics.js  ratiocurve.js  slope.js  smallmultiples.js  strength.js  survival.js  theme.js
docs/data/: manifest.json  summary.json
docs/data/regions/: ca.json  ca_north.json  ca_south.json  co_afghanistan.json  co_argentina.json  co_armenia.json  co_australia.json  co_azerbaijan.json  co_barbados.json  co_belize.json  co_bosnia_herzegovina.json  co_brazil.json  co_bulgaria.json  co_canada.json  co_chile.json  co_china.json  co_chinese_taipei.json  co_colombia.json  co_croatia.json  co_cyprus.json  co_czech_republic.json  co_denmark.json  co_dominican_republic.json  co_ecuador.json  co_france.json  co_germany.json  co_greece.json  co_hungary.json  co_india.json  (+84 more)
pipeline/: __init__.py  acquire.py  bootstrap.py  config.py  emit.py  geocode.py  metrics.py  normalize.py  regions.py  run.py  strength.py  tba.py
scripts/: geolocate_pa.py
tests/: test_geocode.py  test_metrics.py  test_regions.py  test_strength.py
